--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>地学・地質学 学習ポータル</title>
+<title>信大理学部理学科地球学コース試験対策まとめ</title>
 <style>
     :root { --primary: #2c3e50; --accent: #3498db; --bg: #f0f2f5; }
     body { font-family: "Helvetica Neue", Arial, sans-serif; background: var(--bg); color: #333; padding: 20px; text-align: center; margin: 0; }
@@ -69,7 +69,7 @@
             <div class="info">
                 <span class="icon">🦕</span>
                 <div>
-                    <span class="title">第四紀学</span>
+                    <span class="title">第四紀学25年度</span>
                     <span class="sub">Quaternary Research</span>
                 </div>
             </div>
@@ -80,7 +80,7 @@
             <div class="info">
                 <span class="icon">🦖</span>
                 <div>
-                    <span class="title">地球史学</span>
+                    <span class="title">地球史学25年度</span>
                     <span class="sub">Historical Geology</span>
                 </div>
             </div>
@@ -91,7 +91,7 @@
             <div class="info">
                 <span class="icon">🌏</span>
                 <div>
-                    <span class="title">地学概論</span>
+                    <span class="title">地学概論24年度</span>
                     <span class="sub">Intro to Earth Science</span>
                 </div>
             </div>
@@ -102,7 +102,7 @@
             <div class="info">
                 <span class="icon">💎</span>
                 <div>
-                    <span class="title">鉱物学</span>
+                    <span class="title">鉱物学25年度</span>
                     <span class="sub">Mineralogy</span>
                 </div>
             </div>
@@ -113,7 +113,7 @@
             <div class="info">
                 <span class="icon">🌋</span>
                 <div>
-                    <span class="title">岩石学</span>
+                    <span class="title">岩石学25年度</span>
                     <span class="sub">Petrology</span>
                 </div>
             </div>
@@ -124,7 +124,7 @@
             <div class="info">
                 <span class="icon">🇬🇧</span>
                 <div>
-                    <span class="title">科学英語</span>
+                    <span class="title">科学英語25年度</span>
                     <span class="sub">Scientific English</span>
                 </div>
             </div>
