--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>信大理学部理学科地球学コース試験対策まとめ</title>
+<title>地球学コース試験対策まとめ</title>
 <style>
     :root { --primary: #2c3e50; --accent: #3498db; --bg: #f0f2f5; }
     body { font-family: "Helvetica Neue", Arial, sans-serif; background: var(--bg); color: #333; padding: 20px; text-align: center; margin: 0; }
@@ -144,4 +144,5 @@
     </script>
 </body>
 </html>
+
 
