--- a/ScientificEnglish/listening1.html
+++ b/ScientificEnglish/listening1.html
@@ -132,7 +132,7 @@
     <h1>聞き取り第1回：地質学</h1>
     
     <div class="video-info">
-        <p>※ 動画が「エラー153」で再生できない場合、動画の所有者が埋め込みを許可していません。<br>
+        <p>※ 動画が「エラー153」で再生できない場合、<br>
         その場合は下の「別タブで開く」を使ってください。</p>
     </div>
 
@@ -318,3 +318,4 @@
     </script>
 </body>
 </html>
+
