--- a/ScientificEnglish/listening1.html
+++ b/ScientificEnglish/listening1.html
@@ -132,8 +132,7 @@
     <h1>聞き取り第1回：地質学</h1>
     
     <div class="video-info">
-        <p>※ 動画が「エラー153」で再生できない場合、動画の所有者が埋め込みを許可していません。<br>
-        その場合は下の「別タブで開く」を使ってください。</p>
+        <p>※ 再生できない場合は「別タブを開く」をつかってください。</p>
     </div>
 
     <div id="quiz-container"></div>
@@ -318,3 +317,4 @@
     </script>
 </body>
 </html>
+
