--- a/ScientificEnglish/listening1.html
+++ b/ScientificEnglish/listening1.html
@@ -132,7 +132,7 @@
     <h1>聞き取り第1回：地質学</h1>
     
     <div class="video-info">
-        <p>※ 再生できない場合は「別タブを開く」をつかってください。</p>
+        <p>※ 再生できない場合は「別タブで開く」をつかってください。</p>
     </div>
 
     <div id="quiz-container"></div>
@@ -317,4 +317,5 @@
     </script>
 </body>
 </html>
+
 
