--- a/ScientificEnglish/index.html
+++ b/ScientificEnglish/index.html
@@ -145,7 +145,16 @@
             </div>
             <span class="arrow">▶</span>
         </a>
+
+        <a href="listening8.html" class="quiz-card">
+            <div class="quiz-info">
+                <span class="quiz-title">第8回：Climate Change History</span>
+                <span class="quiz-topic">深海体積物</span>
+            </div>
+            <span class="arrow">▶</span>
+        </a>
     </div>
 
 </body>
+
 </html>
