Fix HTML encoding issues in index.html

--- a/ScientificEnglish/index.html
+++ b/ScientificEnglish/index.html
@@ -148,7 +148,7 @@
 
         <a href="listening8.html" class="quiz-card">
             <div class="quiz-info">
-                <span class="quiz-title">第8回：Climate Change History</span>
+                <span class="quiz-title">第8回：deep sea sedimentation</span>
                 <span class="quiz-topic">深海体積物</span>
             </div>
             <span class="arrow">▶</span>
@@ -158,3 +158,4 @@
 </body>
 
 </html>
+
