--- a/ScientificEnglish/listening1.html
+++ b/ScientificEnglish/listening1.html
@@ -18,6 +18,21 @@
             color: #2c3e50;
             margin-bottom: 10px;
         }
+        /* 追加した戻るボタンのスタイル */
+        .back-link-btn {
+            display: inline-block;
+            margin-bottom: 15px;
+            padding: 8px 16px;
+            background-color: #95a5a6;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            font-size: 0.9em;
+            transition: background-color 0.2s;
+        }
+        .back-link-btn:hover {
+        background-color: #7f8c8d;
+        }
         .video-info {
             text-align: center;
             margin-bottom: 30px;
@@ -317,5 +332,6 @@
     </script>
 </body>
 </html>
+
 
 
