Add back button and improve HTML structure

--- a/ScientificEnglish/listening1.html
+++ b/ScientificEnglish/listening1.html
@@ -143,7 +143,7 @@
     </style>
 </head>
 <body>
-
+    <a href="index.html" class="back-link-btn">← 一覧に戻る</a>
     <h1>聞き取り第1回：地質学</h1>
     
     <div class="video-info">
@@ -332,6 +332,7 @@
     </script>
 </body>
 </html>
+
 
 
 
