--- a/ScientificEnglish/listening4.html
+++ b/ScientificEnglish/listening4.html
@@ -18,6 +18,21 @@
             color: #2c3e50;
             margin-bottom: 10px;
         }
+        /* 追加した戻るボタンのスタイル */
+        .back-link-btn {
+            display: inline-block;
+            margin-bottom: 15px;
+            padding: 8px 16px;
+            background-color: #95a5a6;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            font-size: 0.9em;
+            transition: background-color 0.2s;
+        }
+        .back-link-btn:hover {
+            background-color: #7f8c8d;
+        }
         .video-info {
             text-align: center;
             margin-bottom: 30px;
@@ -129,6 +144,7 @@
 </head>
 <body>
 
+    <a href="index.html" class="back-link-btn">← 一覧に戻る</a>
     <h1>聞き取り第4回：The Water Cycle & Sediment Transport</h1>
     
     <div class="video-info">
@@ -318,3 +334,4 @@
     </script>
 </body>
 </html>
+
