--- a/Quaternary/mcq.html
+++ b/Quaternary/mcq.html
@@ -7,7 +7,22 @@
 <style>
     :root { --primary: #2c3e50; --accent: #3498db; --correct: #27ae60; --wrong: #e74c3c; --bg: #f0f2f5; }
     body { font-family: "Helvetica Neue", Arial, sans-serif; background-color: var(--bg); color: #333; margin: 0; padding-bottom: 60px; line-height: 1.6; }
-    
+
+    /* 追加した戻るボタンのスタイル */
+    .back-link-btn {
+        display: inline-block;
+        margin-bottom: 15px;
+        padding: 8px 16px;
+        background-color: #95a5a6;
+        color: white;
+        text-decoration: none;
+        border-radius: 4px;
+        font-size: 0.9em;
+        transition: background-color 0.2s;
+    }
+    .back-link-btn:hover {
+        background-color: #7f8c8d;
+    }
     /* ヘッダー */
     header { background: var(--primary); color: white; padding: 15px; text-align: center; position: sticky; top: 0; z-index: 100; box-shadow: 0 2px 5px rgba(0,0,0,0.2); }
     h1 { margin: 0; font-size: 1.2rem; }
@@ -51,6 +66,7 @@
 <body>
 
 <header>
+    <a href="index.html" class="back-link-btn">← 一覧に戻る</a>
     <h1>第四紀学 100問ノック</h1>
     <div class="status-bar" id="status">読込中...</div>
 </header>
@@ -290,4 +306,5 @@ function showResult() {
 window.onload = initApp;
 </script>
 </body>
+
 </html>
