--- a/Quaternary/tf.html
+++ b/Quaternary/tf.html
@@ -12,7 +12,21 @@
     header { background: var(--primary); color: white; padding: 15px; text-align: center; position: sticky; top: 0; z-index: 100; box-shadow: 0 2px 5px rgba(0,0,0,0.2); }
     h1 { margin: 0; font-size: 1.3rem; }
     .status-bar { font-size: 0.9rem; margin-top: 5px; opacity: 0.9; }
-
+    /* 追加した戻るボタンのスタイル */
+    .back-link-btn {
+        display: inline-block;
+        margin-bottom: 15px;
+        padding: 8px 16px;
+        background-color: #95a5a6;
+        color: white;
+        text-decoration: none;
+        border-radius: 4px;
+        font-size: 0.9em;
+        transition: background-color 0.2s;
+    }
+    .back-link-btn:hover {
+        background-color: #7f8c8d;
+    }
     /* Container */
     .container { max-width: 700px; margin: 20px auto; padding: 0 15px; }
     
@@ -57,6 +71,7 @@
 <body>
 
 <header>
+    <a href="index.html" class="back-link-btn">← 一覧に戻る</a>
     <h1>第四紀学 直前対策 〇×</h1>
     <div class="status-bar" id="status">読込中...</div>
 </header>
@@ -279,4 +294,5 @@ function showResult() {
 window.onload = initApp;
 </script>
 </body>
+
 </html>
