--- a/Quaternary/vocab.html
+++ b/Quaternary/vocab.html
@@ -7,6 +7,21 @@
 <style>
     body { font-family: "Helvetica Neue", Arial, sans-serif; max-width: 800px; margin: 0 auto; padding: 20px; background-color: #eef2f3; }
     h1 { color: #2c3e50; text-align: center; border-bottom: 2px solid #3498db; padding-bottom: 10px; }
+   /* 追加した戻るボタンのスタイル */
+    .back-link-btn {
+        display: inline-block;
+        margin-bottom: 15px;
+        padding: 8px 16px;
+        background-color: #95a5a6;
+        color: white;
+        text-decoration: none;
+        border-radius: 4px;
+        font-size: 0.9em;
+        transition: background-color 0.2s;
+    }
+    .back-link-btn:hover {
+        background-color: #7f8c8d;
+    }
     .quiz-container { background: white; padding: 20px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
     .section-title { background-color: #34495e; color: white; padding: 5px 10px; margin-top: 30px; border-radius: 4px; font-size: 1.1em; }
     .question-box { margin-bottom: 15px; padding: 15px; border-bottom: 1px solid #eee; display: flex; flex-wrap: wrap; align-items: center; }
@@ -24,7 +39,7 @@
 </style>
 </head>
 <body>
-
+<a href="index.html" class="back-link-btn">← 一覧に戻る</a>
 <h1>第四紀学 英単語特訓</h1>
 <div class="quiz-container">
     <p>日本語に対応する英単語を入力してください（大文字・小文字は区別しません）。</p>
@@ -135,4 +150,5 @@
 </script>
 
 </body>
+
 </html>
