--- a/index.html
+++ b/index.html
@@ -107,7 +107,18 @@
 
         <a href="javascript:void(0)" class="subject-card disabled" onclick="showMsg()" >
             <div class="info">
-                <span class="icon">💎</span>
+                <span class="icon">
+                   <svg width="45" height="45" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;">
+                        <circle cx="50" cy="50" r="48" fill="#ecf0f1" />
+                        <path d="M25,80 L25,50 L35,35 L45,50 L45,80 Z" fill="#2c3e50"/>
+                        <path d="M25,50 L35,35 L45,50" stroke="#ecf0f1" stroke-width="2" fill="none"/>
+                        <path d="M40,85 L40,35 L55,15 L70,35 L70,85 Z" fill="#2c3e50"/>
+                        <path d="M40,35 L55,15 L70,35" stroke="#ecf0f1" stroke-width="2" fill="none"/>
+                        <path d="M55,15 L55,85" stroke="#ecf0f1" stroke-width="2" fill="none" opacity="0.3"/>
+                        <path d="M65,80 L65,45 L75,30 L85,45 L85,80 Z" fill="#2c3e50"/>
+                        <path d="M65,45 L75,30 L85,45" stroke="#ecf0f1" stroke-width="2" fill="none"/>
+                    </svg> 
+                </span>
                 <div>
                     <span class="title">鉱物学25年度</span>
                     <span class="sub">Mineralogy</span>
@@ -118,7 +129,15 @@
 
         <a href="javascript:void(0)" class="subject-card disabled" onclick="showMsg()">
             <div class="info">
-                <span class="icon">🌋</span>
+                <span class="icon">
+                   <svg width="45" height="45" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;">
+                        <circle cx="50" cy="50" r="48" fill="#ecf0f1" />
+                        <path d="M20,80 Q15,60 30,55 Q45,50 60,60 L70,80 Z" fill="#95a5a6"/>
+                        <path d="M45,75 L35,65 L70,30 L80,40 Z" fill="#2c3e50"/>
+                        <path d="M65,35 L60,30 L70,20 L80,10 L90,20 L95,25 L90,30 L85,25 L75,35 Z" fill="#2c3e50"/>
+                        <path d="M65,35 L50,45 L55,50 L70,40" fill="#2c3e50"/>
+                    </svg> 
+                </span>
                 <div>
                     <span class="title">岩石学25年度</span>
                     <span class="sub">Petrology</span>
@@ -129,7 +148,16 @@
 
         <a href="ScientificEnglish/index.html" class="subject-card active">
             <div class="info">
-                <span class="icon">🇬🇧</span>
+                <span class="icon">
+                    <svg width="45" height="45" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;">
+                        <circle cx="50" cy="50" r="48" fill="#ecf0f1" />
+                        <path d="M35,30 L35,20 L45,20 L45,30 L25,70 L55,70 L35,30 Z" fill="#2c3e50"/>
+                        <path d="M30,60 L50,60 L52,65 L28,65 Z" fill="#ecf0f1" opacity="0.5"/>
+                        <path d="M55,70 L55,50 L65,20 L75,20 L85,50 L65,70 Z" fill="#2c3e50"/>
+                        <path d="M55,70 L45,80 L55,85 L65,70" fill="#2c3e50"/>
+                        <text x="65" y="55" font-family="Arial, sans-serif" font-weight="bold" font-size="20" fill="#ecf0f1">A</text>
+                    </svg>
+                </span>
                 <div>
                     <span class="title">科学英語25年度</span>
                     <span class="sub">Scientific English</span>
@@ -151,6 +179,7 @@
     </script>
 </body>
 </html>
+
 
 
 
