--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <h3>🔔 更新情報</h3>
         <ul>
             <li><span class="date">01/22</span> 第四紀学のアイコンをマンモスに変更しました 🐘</li>
-            <li><span class="date">01/21</span> 科学英語のリスニングドリルを追加しました 🎧</li>
+            <li><span class="date">01/21</span> 科学英語のリスニングドリルを変更しスマホでも使いやすくしました 🎧</li>
         </ul>
     </div>
 
@@ -201,3 +201,4 @@
     </script>
 </body>
 </html>
+
