--- a/ScientificEnglish/listening7.html
+++ b/ScientificEnglish/listening7.html
@@ -203,8 +203,8 @@
             },
             {
                 id: 4,
-                timeDisplay: "02:29 ～ ", // 163s - 5s = 158s
-                startSeconds: 158,
+                timeDisplay: "02:29 ～ ", 
+                startSeconds: 149,
                 theme: "グラフの形状と「ホッケースティック」の喩えについて",
                 correct: "In fact, if you use your imagination, that record sort of resembles a sports implement known as a hockey stick.",
                 translation: "実際、想像力を働かせて見れば、その記録はスポーツ用具の「ホッケースティック」に少し似ている。"
@@ -361,4 +361,5 @@
     </script>
 </body>
 </html>
+
 
