--- a/ScientificEnglish/listening2.html
+++ b/ScientificEnglish/listening2.html
@@ -223,6 +223,9 @@
                         <strong>テーマ:</strong> ${q.theme}
                     </div>
                     <div>
+                        <button class="play-link-btn" onclick="playEmbeddedVideo(${index}, ${q.startSeconds})">▶ 埋め込み再生</button>
+                        <br>
+                        <br>
                         <textarea id="input-${index}" placeholder="ここに英語の文章を入力してください..."></textarea>
                     </div>
                     <div class="controls">
@@ -333,4 +336,5 @@
     </script>
 </body>
 </html>
+
 
