--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
     <div class="news-box">
         <h3>🔔 更新情報</h3>
         <ul>
-            <li><span class="date">01/22</span> 第四紀学のアイコンをマンモスに変更しました 🐘</li>
-            <li><span class="date">01/21</span> 科学英語のリスニングドリルを変更しスマホでも使いやすくしました 🎧</li>
+            <li><span class="date">01/22</span> 聞き取り7の音声を追加しました</li>
+            <li><span class="date">01/22</span> 科学英語のリスニングドリルを修正しスマホでも使いやすくしました 🎧</li>
         </ul>
     </div>
 
@@ -201,4 +201,5 @@
     </script>
 </body>
 </html>
+
 
