--- a/ScientificEnglish/listening1.html
+++ b/ScientificEnglish/listening1.html
@@ -256,13 +256,13 @@
                 <iframe 
                     width="100%" 
                     height="250" 
-                    src="${EMBED_BASE}${VIDEO_ID}?start=${startSeconds}" 
+                    src="${EMBED_BASE}${VIDEO_ID}?start=${startSeconds}&autplay=1" 
                     frameborder="0" 
-                    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                    allow="accelerometer; autplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
                 </iframe>
                 <div style="text-align:center; font-size:0.8em; color:#666; margin-top:5px;">
-                    ※再生ボタンを押してください。それでもエラーが出る場合は「別タブで開く」をご利用ください。
+                    エラーが出る場合は「別タブで開く」をご利用ください。
                 </div>
             `;
         }
@@ -334,6 +334,7 @@
     </script>
 </body>
 </html>
+
 
 
 
