--- a/ScientificEnglish/listening1.html
+++ b/ScientificEnglish/listening1.html
@@ -256,7 +256,7 @@
                 <iframe 
                     width="100%" 
                     height="250" 
-                    src="${EMBED_BASE}${VIDEO_ID}?start=${startSeconds}&autplay=1" 
+                    src="${EMBED_BASE}${VIDEO_ID}?start=${startSeconds}&autplay=1&mute=1" 
                     frameborder="0" 
                     allow="accelerometer; autplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     referrerpolicy="strict-origin-when-cross-origin"
@@ -335,6 +335,7 @@
     </script>
 </body>
 </html>
+
 
 
 
