--- a/ScientificEnglish/listening1.html
+++ b/ScientificEnglish/listening1.html
@@ -210,6 +210,9 @@
                 <div class="question-card">
                     <div class="q-header">
                         <span class="q-title">第${q.id}問 (${q.timeDisplay})</span>
+                    <div class="theme-text">
+                        <strong>テーマ:</strong> ${q.theme}
+                    </div>
                         <div>
                             <a href="${directLink}" target="_blank" class="fallback-link">別タブで開く</a>
                         </div>
@@ -217,9 +220,6 @@
                     
                     <div id="video-area-${index}" class="embedded-video-container"></div>
 
-                    <div class="theme-text">
-                        <strong>テーマ:</strong> ${q.theme}
-                    </div>
                     <div>
                         <button class="play-link-btn" onclick="playEmbeddedVideo(${index}, ${q.startSeconds})">▶ 埋め込み再生</button>
                         <br>
@@ -251,15 +251,14 @@
             const targetArea = document.getElementById(`video-area-${index}`);
             targetArea.style.display = "block";
             
-            // 自動再生を再登載
+            // 自動再生は再削除
             targetArea.innerHTML = `
                 <iframe 
                     width="100%" 
-                    height="250" 
-                    src="${EMBED_BASE}${VIDEO_ID}?start=${startSeconds}&autplay=1&mute=1" 
+                    height="200" 
+                    src="${EMBED_BASE}${VIDEO_ID}?start=${startSeconds}" 
                     frameborder="0" 
-                    allow="accelerometer; autplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                    referrerpolicy="strict-origin-when-cross-origin"
+                    allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
                 </iframe>
                 <div style="text-align:center; font-size:0.8em; color:#666; margin-top:5px;">
@@ -335,6 +334,7 @@
     </script>
 </body>
 </html>
+
 
 
 
