--- a/ScientificEnglish/listening2.html
+++ b/ScientificEnglish/listening2.html
@@ -211,8 +211,12 @@
                 <div class="question-card">
                     <div class="q-header">
                         <span class="q-title">第${q.id}問 (${q.timeDisplay})</span>
+                   
+                        <<div class="theme-text">
+                            <strong>テーマ:</strong> ${q.theme}
+                        </div>
                         <div>
-                            <a href="${directLink}" target="_blank" class="fallback-link">別タブで開く</a>
+                             a href="${directLink}" target="_blank" class="fallback-link">別タブで開く</a>
                         </div>
                     </div>
                     
@@ -256,7 +260,7 @@
             targetArea.innerHTML = `
                 <iframe 
                     width="100%" 
-                    height="250" 
+                    height="150" 
                     src="${EMBED_BASE}${VIDEO_ID}?start=${startSeconds}" 
                     frameborder="0" 
                     allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -335,6 +339,7 @@
     </script>
 </body>
 </html>
+
 
 
 
