--- a/ScientificEnglish/listening2.html
+++ b/ScientificEnglish/listening2.html
@@ -212,11 +212,11 @@
                     <div class="q-header">
                         <span class="q-title">第${q.id}問 (${q.timeDisplay})</span>
                    
-                    <div class="theme-text">
-                        <strong>テーマ:</strong> ${q.theme}
-                    </div>
+                        <div class="theme-text">
+                            <strong>テーマ:</strong> ${q.theme}
+                        </div>
                         <div>
-                             a href="${directLink}" target="_blank" class="fallback-link">別タブで開く</a>
+                             <a href="${directLink}" target="_blank" class="fallback-link">別タブで開く</a>
                         </div>
                     </div>
                     
@@ -339,6 +339,7 @@
     </script>
 </body>
 </html>
+
 
 
 
