--- a/ScientificEnglish/listening6.html
+++ b/ScientificEnglish/listening6.html
@@ -216,6 +216,8 @@
                         <div class="theme-text">
                             <strong>テーマ:</strong> ${q.theme}
                         </div>
+                        <br>
+                        <div>
                             <a href="${directLink}" target="_blank" class="fallback-link">別タブで開く</a>
                         </div>
                     </div>
@@ -257,7 +259,7 @@
             targetArea.innerHTML = `
                 <iframe 
                     width="100%" 
-                    height="250" 
+                    height="150" 
                     src="${EMBED_BASE}${VIDEO_ID}?start=${startSeconds}" 
                     frameborder="0" 
                     allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -336,6 +338,7 @@
     </script>
 </body>
 </html>
+
 
 
 
