--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel ="apple-touch-icon" href="icon.ping">
+<link rel ="icon" href="icon.ping"
 <title>地球学コース試験対策まとめ</title>
 <style>
     :root { --primary: #2c3e50; --accent: #3498db; --bg: #f0f2f5; }
@@ -201,5 +203,6 @@
     </script>
 </body>
 </html>
+
 
 
