--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <div class="news-box">
         <h3>🔔 更新情報</h3>
         <ul>
-            <li><span class="date">01/22</span> 聞き取り7の音声を追加しました</li>
-            <li><span class="date">01/22</span> 科学英語のリスニングドリルを修正しスマホでも使いやすくしました 🎧</li>
+            <li><span class="date">01/22</span> アプリアイコンをせっていしました</li>
+            <li><span class="date">01/22</span> リスニング7に音声を追加しました</li>
         </ul>
     </div>
 
@@ -203,6 +203,7 @@
     </script>
 </body>
 </html>
+
 
 
 
