--- a/ScientificEnglish/index.html
+++ b/ScientificEnglish/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>科学英語：聞き取り問題一覧</title>
+    <title>科学英語：聞き取り問題・単語・熟語演習一覧</title>
     <style>
         body {
             font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
@@ -102,10 +102,17 @@
     <header>
         <a href="../index.html" class="back-link-btn">← ホームに戻る</a>
         <h1>Scientific English</h1>
-        <p class="subtitle">地球科学英語 聞き取り・翻訳ドリル</p>
+        <p class="subtitle">地球科学英語 聞き取り・翻訳・単語，熟語ドリル</p>
     </header>
 
     <div class="quiz-list">
+         <a href="Time Scales Vocabulary and Idiom Flashcards.html" class="quiz-card">
+            <div class="quiz-info">
+                <span class="quiz-title">time scales単語・熟語カード</span>
+                <span class="quiz-topic">全200単語・熟語</span>
+            </div>
+            <span class="arrow">▶</span>
+        </a>
         <a href="listening1.html" class="quiz-card">
             <div class="quiz-info">
                 <span class="quiz-title">第1回：Geology</span>
@@ -174,5 +181,6 @@
 </body>
 
 </html>
+
 
 
