Update Time Scales Vocabulary and Idiom Flashcards.html

--- a/ScientificEnglish/Time Scales Vocabulary and Idiom Flashcards.html
+++ b/ScientificEnglish/Time Scales Vocabulary and Idiom Flashcards.html
@@ -11,7 +11,18 @@
     /* Header & Nav */
     header { background: var(--primary); color: white; padding: 15px 10px; text-align: center; position: sticky; top: 0; z-index: 100; box-shadow: 0 2px 5px rgba(0,0,0,0.2); }
     h1 { margin: 0; font-size: 1.1rem; }
-    
+   /* 戻るボタン */
+    .back-link-btn {
+        display: inline-block;
+        margin-bottom: 15px;
+        padding: 8px 16px;
+        background-color: #95a5a6;
+        color: white;
+        text-decoration: none;
+        border-radius: 4px;
+        font-size: 0.9em;
+        transition: background-color 0.2s;
+
     /* 5つのタブ */
     .nav-tabs { display: flex; justify-content: space-between; background: #fff; padding: 0; margin: 0; list-style: none; border-bottom: 1px solid #ddd; }
     .nav-item { flex: 1; text-align: center; padding: 10px 2px; cursor: pointer; font-weight: bold; font-size: 0.75rem; color: #95a5a6; border-bottom: 3px solid transparent; transition: 0.3s; }
@@ -58,6 +69,7 @@
 <body>
 
 <header>
+    <a href="index.html" class="back-link-btn">← 一覧に戻る</a>
     <h1>Time Scales 英単語・熟語 (英語→日本語・全200語)</h1>
 </header>
 
@@ -445,4 +457,5 @@ window.onload = function() {
 
 </script>
 </body>
+
 </html>
