--- a/ScientificEnglish/index.html
+++ b/ScientificEnglish/index.html
@@ -108,11 +108,20 @@
     <div class="quiz-list">
          <a href="Time Scales Vocabulary and Idiom Flashcards.html" class="quiz-card">
             <div class="quiz-info">
-                <span class="quiz-title">time scales単語・熟語カード</span>
+                <span class="quiz-title">time Scales　単語・熟語カード</span>
                 <span class="quiz-topic">全200単語・熟語</span>
             </div>
             <span class="arrow">▶</span>
         </a>
+        
+        <a href="Time Scales_translation_practice.html" class="quiz-card">
+            <div class="quiz-info">
+                <span class="quiz-title">time Scales　日本語訳</span>
+                <span class="quiz-topic">前10問</span>
+            </div>
+            <span class="arrow">▶</span>
+        </a>
+             
         <a href="listening1.html" class="quiz-card">
             <div class="quiz-info">
                 <span class="quiz-title">第1回：Geology</span>
@@ -181,6 +190,7 @@
 </body>
 
 </html>
+
 
 
 
