--- a/ScientificEnglish/index.html
+++ b/ScientificEnglish/index.html
@@ -117,7 +117,7 @@
         <a href="Time Scales_translation_practice.html" class="quiz-card">
             <div class="quiz-info">
                 <span class="quiz-title">time Scales　日本語訳</span>
-                <span class="quiz-topic">前10問</span>
+                <span class="quiz-topic">全10問</span>
             </div>
             <span class="arrow">▶</span>
         </a>
@@ -190,6 +190,7 @@
 </body>
 
 </html>
+
 
 
 
