--- a/ScientificEnglish/index.html
+++ b/ScientificEnglish/index.html
@@ -114,7 +114,7 @@
             <span class="arrow">▶</span>
         </a>
         
-        <a href="Time Scales_translation_practice.html" class="quiz-card">
+        <a href="time Scales_translation_practice.html" class="quiz-card">
             <div class="quiz-info">
                 <span class="quiz-title">time Scales　日本語訳</span>
                 <span class="quiz-topic">全10問</span>
@@ -190,6 +190,7 @@
 </body>
 
 </html>
+
 
 
 
