--- a/ScientificEnglish/index.html
+++ b/ScientificEnglish/index.html
@@ -108,7 +108,7 @@
     <div class="quiz-list">
          <a href="Time Scales Vocabulary and Idiom Flashcards.html" class="quiz-card">
             <div class="quiz-info">
-                <span class="quiz-title">time Scales　単語・熟語カード</span>
+                <span class="quiz-title">Time Scales　単語・熟語カード</span>
                 <span class="quiz-topic">全200単語・熟語</span>
             </div>
             <span class="arrow">▶</span>
@@ -116,7 +116,7 @@
         
         <a href="time Scales_translation_practice.html" class="quiz-card">
             <div class="quiz-info">
-                <span class="quiz-title">time Scales　日本語訳</span>
+                <span class="quiz-title">Time Scales　日本語訳</span>
                 <span class="quiz-topic">全10問</span>
             </div>
             <span class="arrow">▶</span>
@@ -190,6 +190,7 @@
 </body>
 
 </html>
+
 
 
 
