--- a/ScientificEnglish/index.html
+++ b/ScientificEnglish/index.html
@@ -108,7 +108,7 @@
     <div class="quiz-list">
          <a href="Time Scales Vocabulary and Idiom Flashcards.html" class="quiz-card">
             <div class="quiz-info">
-                <span class="quiz-title">Time Scales　単語・熟語カード</span>
+                <span class="quiz-title">Time Scales　単語・熟語確認</span>
                 <span class="quiz-topic">全200単語・熟語</span>
             </div>
             <span class="arrow">▶</span>
@@ -190,6 +190,7 @@
 </body>
 
 </html>
+
 
 
 
