--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
     <div class="news-box">
         <h3>🔔 更新情報</h3>
         <ul>
-            <li><span class="date">01/22</span> アプリアイコンをせっていしました</li>
-            <li><span class="date">01/22</span> リスニング7に音声を追加しました</li>
+             <li><span class="date">01/25</span> 科学英語の日本語訳問題と単語確認用ページを追加しました</li>
+            <li><span class="date">01/22</span> アプリアイコンを設定いしました</li>
         </ul>
     </div>
 
@@ -203,6 +203,7 @@
     </script>
 </body>
 </html>
+
 
 
 
