--- a/ScientificEnglish/index.html
+++ b/ScientificEnglish/index.html
@@ -185,11 +185,19 @@
             </div>
             <span class="arrow">▶</span>
         </a>
+        <a href="past exam questions.html" class="quiz-card">
+            <div class="quiz-info">
+                <span class="quiz-title">過去問</span>
+                <span class="quiz-topic">3問</span>
+            </div>
+            <span class="arrow">▶</span>
+        </a>
     </div>
 
 </body>
 
 </html>
+
 
 
 
