--- a/ScientificEnglish/index.html
+++ b/ScientificEnglish/index.html
@@ -187,7 +187,7 @@
         </a>
         <a href="past exam questions.html" class="quiz-card">
             <div class="quiz-info">
-                <span class="quiz-title">過去問</span>
+                <span class="quiz-title">過去問（聞き取り）</span>
                 <span class="quiz-topic">3問</span>
             </div>
             <span class="arrow">▶</span>
@@ -197,6 +197,7 @@
 </body>
 
 </html>
+
 
 
 
