Update past exam questions.html

--- a/ScientificEnglish/past exam questions.html
+++ b/ScientificEnglish/past exam questions.html
@@ -151,11 +151,11 @@
             {
                 id: 3,
                 videoId: "N1kF88Eznr8",
-                timeDisplay: "00:01 ～ 00:20",
+                timeDisplay: "00:01 ～ 00:27",
                 startSeconds: 1,
                 theme: "河川による土砂の運搬と海洋環境のダイナミズムについて",
-                correct: "The rivers with their sediment load have reached the sea. Here, they will enter a very dynamic environment with bathymetries varying from 0 to more than 10000 meters. A domain characterized by slow and very rapid water movements.",
-                translation: "土砂を運搬してきた川は、海へと到達しました。ここで川は、水深が0メートルから10,000メートル以上にまで変化する非常にダイナミックな環境へと入っていきます。そこは、緩やかな水の動きと非常に急激な水の動きによって特徴づけられる領域です。"
+                correct: "The rivers with their sediment load have reached the sea. Here, they will enter a very dynamic environment with bathymetries varying from 0 to more than 10000 meters. A domain characterized by slow and very rapid water movements. A region where life can be abundant or nearly completely absent.",
+                translation: "土砂を運搬してきた川は、海へと到達しました。ここで川は、水深が0メートルから10,000メートル以上にまで変化する非常にダイナミックな環境へと入っていきます。そこは、緩やかな水の動きと非常に急激な水の動きによって特徴づけられる領域です。生物が豊富に存在することもあれば，ほぼ皆無であることもある場所です。"
             }
         ];
 
@@ -270,4 +270,5 @@
 </body>
 
 </html>
+
 
