--- a/ScientificEnglish/index.html
+++ b/ScientificEnglish/index.html
@@ -192,11 +192,19 @@
             </div>
             <span class="arrow">▶</span>
         </a>
+        <a href="past exam2.html" class="quiz-card">
+            <div class="quiz-info">
+                <span class="quiz-title">過去問（和訳）</span>
+                <span class="quiz-topic">2問</span>
+            </div>
+            <span class="arrow">▶</span>
+        </a>
     </div>
 
 </body>
 
 </html>
+
 
 
 
